--- a/UBA/app/src/main/res/values/strings.xml
+++ b/UBA/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">Shopping</string>
     <string name="lbl_recording">recorded</string>
 
-    <string name="android_pay">Android Pay. Simple way to pay</string>
+    <string name="android_pay">Cheapest prices you have ever seen</string>
     <string name="add_to_cart">ADD TO CART</string>
-    <string name="description_example">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
-    <string name="product_size">Size: 40</string>
+    <string name="description_example">New laptop Core i7</string>
+    <string name="product_size">Screen Size: 16</string>
     <string name="product_color">Color: Black</string>
-    <string name="product_price">Price: 80$</string>
+    <string name="product_price">Price: 1300$</string>
     <string name="action_cart">Shopping cart</string>
     <string name="quantity">1</string>
     <string name="product_name">Sleek black top</string>
@@ -21,7 +21,6 @@
     <string name="pay_with_paypal">Pay with PayPal</string>
 
 
-
     <string name="action_sign_in_short">Register</string>
     <string name="email">Email</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
@@ -29,7 +28,7 @@
     <string name="change_email">Change Email</string>
     <string name="change_password">Change Password</string>
     <string name="send_password_reset_email">Send Password reset email</string>
-    <string name="remove_user">Remove user</string>
+    <string name="remove_user">Cancel</string>
     <string name="new_pass">New Password</string>
     <string name="title_activity_profile">Firebase</string>
     <string name="title_activity_login">Sign in</string>
@@ -52,5 +51,10 @@
     <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
 
 
+    <string name="theme_title">Themes:</string>
+    <string name="light_theme">Dark theme</string>
+    <string name="dark_theme">Light theme</string>
+    <string name="system_theme">Use system theme</string>
+    <string name="battery_saver_theme">Battery saver theme</string>
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
 </resources>
