--- a/UBA/app/src/main/res/values/strings.xml
+++ b/UBA/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="product_price">Price: 1300$</string>
     <string name="action_cart">Shopping cart</string>
     <string name="quantity">1</string>
-    <string name="product_name">Sleek black top</string>
+    <string name="product_name">New Laptop</string>
     <string name="price">100 $</string>
     <string name="remove_from_cart">Remove</string>
     <string name="continue_shopping">Continue shopping</string>
