some small fixes
before presentation fixes

--- a/UBA/app/src/main/res/values/strings.xml
+++ b/UBA/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="lbl_recording">recorded</string>
     <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
 
-    <string name="store_name" translatable="false">Auto T-Shirt Shop</string>
+
     <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
     <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
     <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
@@ -42,8 +42,8 @@
     <string name="hint_password">Password</string>
     <string name="hint_name">Fullname</string>
     <string name="btn_login">LOGIN</string>
-    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
-    <string name="btn_link_to_login">Already registered. Login Me!</string>
+    <string name="btn_link_to_register">Not a member? Register!</string>
+    <string name="btn_link_to_login">Already registered. Login!</string>
     <string name="title_activity_reset_password">ResetPasswordActivity</string>
     <string name="btn_forgot_password">Forgot your password?</string>
     <string name="btn_reset_password">Reset Password</string>
